--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -82,6 +82,15 @@
             </p>
         </div>
     </div>
+    <div>
+        <h2>总结</h2>
+        <p>
+            计算机的基本原理是存储程序和程序控制。预先要把指挥计算机如何进行操作的指令序列（称为程序）和原始数据通过输入设备输送到计算机内存贮器中。每一条指令中明确规定了计算机从哪个地址取数，进行什么操作，然后送到什么地址去等步骤。
+        </p>
+        <p>
+            计算机在运行时，先从内存中取出第一条指令，通过控制器的译码，按指令的要求，从存储器中取出数据进行指定的运算和逻辑操作等加工，然后再按地址把结果送到内存中去。接下来，再取出第二条指令，在控制器的指挥下完成规定操作。依此进行下去。直至遇到停止指令。
+        </p>
+    </div>
 </body>
 
 </html>
