--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -493,8 +493,8 @@
 						}
                     </pre>
                     <p>代码有点多，总结一下，执行过程。my_time_handler()函数，是个时间片轮转，周期性地发出中断信号，也就是my_need_sched。my_start_kernel()完成每个进程初始化，每个进程的任务都是my_process(),由于这个函数中有个无限循环，任务永远不会结束；并且启动了0号进程。任务需要调度时根据任务链表顺序进行调度。</p>
-                    <p>来看my_process()函数，先不看my_schedule()函数，并且假设只有两个进程0号和1号，便于分析。my_process()执行过程就是，0号进程启动，执行到77行my_schedule()，被调度到了1号进程，1号进程从65行也就是1号进程的起始开始执行，执行到77行，又调度回0号进程，0号进程从78行继续执行，执行到81行，回到68行继续下一次循环，又执行到77行进行调度.......</p>
-                    <p>下面来看my_schedule()函数，依然假设进程从0号切换到1号再切到0号。0号进程启动后，在my_process()的第77行中进入my_schedule(),执行到my_schedule()的第55行判断一下，由于1号进程没有运行过，next-state!=0,跳到73行，接着运行到80行，保存0号进程的ebp到栈中,81行和84行是保存0号进程的sp,ip;82,83,85行是启动1号进程。1号进程从my_process()函数的起始开始执行，又进入my_schedule()函数，执行到my_schedule()的第55行判断一下，由于0号进程运行过，next-state==0,继续执行，第61行保存1号进程的ebp到栈中,62行和64行是保存1号进程的sp,ip;63行、65行和66行是恢复0号进程。由于之前0号进程保存的ip指向的是67行，所以这次0号进程从my_schedule的第67行恢复执行，由于63行恢复了0号进程的esp,所有68行正确恢复0号进程的ebp,0号进程执行my_schedule()的第91行，回到my_process()的第79行，由运行到68行开始新的循环，又从77行进入my_schedule(),这次执行到my_schedule()的第55行，1号进程运行过，继续执行第57行，又开始保存0号进程，以及恢复1号进程从67行继续执行.......</p>
+                    <p>来看my_process()函数，先不看my_schedule()函数，并且假设只有两个进程0号和1号，便于分析。my_process()执行过程就是，0号进程启动，执行到77行my_schedule()，被调度到了1号进程，1号进程从65行也就是1号进程的起始开始执行，执行到77行，又调度回0号进程，0号进程从78行继续执行，执行到81行，回到68行继续下一次循环，又执行到77行进行调度，1号进程从第78行恢复执行.......</p>
+                    <p>下面来看my_schedule()函数，依然假设进程从0号切换到1号再切到0号。0号进程启动后，在my_process()的第77行中进入my_schedule(),执行到my_schedule()的第55行判断一下，由于1号进程没有运行过，next-state!=0,跳到73行，接着运行到80行，保存0号进程的ebp到栈中,81行和84行是保存0号进程的sp,ip;82,83,85行是启动1号进程。1号进程从my_process()函数的起始开始执行，又进入my_schedule()函数，执行到my_schedule()的第55行判断一下，由于0号进程运行过，next-state==0,继续执行，第61行保存1号进程的ebp到栈中,62行和64行是保存1号进程的sp,ip;63行、65行和66行是恢复0号进程。由于之前0号进程保存的ip指向的是67行，所以这次0号进程从my_schedule的第67行恢复执行，由于63行恢复了0号进程的esp,所有68行正确恢复0号进程的ebp,0号进程执行my_schedule()的第91行，回到my_process()的第79行，又运行到68行开始新的循环，又从77行进入my_schedule(),这次执行到my_schedule()的第55行，判断条件满足，继续执行第57行，又开始保存0号进程，以及恢复1号进程从67行继续执行.......</p>
                 </div>
             </div>
         </section>
