--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -277,6 +277,54 @@
 							cpu_startup_entry(CPUHP_ONLINE);//调用cpu_idle()，0号线程进入idle函数的循环，在该循环中会周期性地检查。
 						}
                     </pre>
+                    <h4>kernel_init()</h4>
+                    <pre name="code" class="brush:cpp;first-line:931;collapse: false">
+                    	static int __ref kernel_init(void *unused)
+						{
+							int ret;
+
+							kernel_init_freeable();
+							/* need to finish all async __init code before freeing the memory */
+							async_synchronize_full();
+							free_initmem();
+							mark_rodata_ro();
+							system_state = SYSTEM_RUNNING;
+							numa_default_policy();
+
+							flush_delayed_fput();
+
+							if (ramdisk_execute_command) {
+								ret = run_init_process(ramdisk_execute_command);
+								if (!ret)
+									return 0;
+								pr_err("Failed to execute %s (error %d)\n",
+								       ramdisk_execute_command, ret);
+							}
+
+							/*
+							 * We try each of these until one succeeds.
+							 *
+							 * The Bourne shell can be used instead of init if we are
+							 * trying to recover a really broken machine.
+							 */
+							if (execute_command) {
+								ret = run_init_process(execute_command);
+								if (!ret)
+									return 0;
+								pr_err("Failed to execute %s (error %d).  Attempting defaults...\n",
+									execute_command, ret);
+							}
+							if (!try_to_run_init_process("/sbin/init") ||
+							    !try_to_run_init_process("/etc/init") ||
+							    !try_to_run_init_process("/bin/init") ||
+							    !try_to_run_init_process("/bin/sh"))
+								return 0;
+
+							panic("No working init found.  Try passing init= option to kernel. "
+							      "See Linux Documentation/init.txt for guidance.");
+						}
+                    </pre>
+                    <p>在kernel_init中我们重点关注以下代码，在这段代码中实际上是通过run_init_process来执行/sbin/init,通过中断向量0x80（system_call）来从内核发起系统调用，如果/sbin/init调用失败，则会继续调用接下来的文件/etc/init,/bin/init,/bin/sh</p>
                     <p>代码有点多，总结一下。系统允许一个进程创建新进程，新进程即为子进程，子进程还可以创建新的子进程，形成进程树结构模型。整个linux系统的所有进程也是一个树形结构。Linux下有3个特殊的进程，idle进程(PID = 0), init进程(PID = 1)和kthreadd(PID = 2)。</p>
                     <p>在smp系统中，每个处理器单元有独立的一个运行队列，而每个运行队列上又有一个idle进程，即有多少处理器单元，就有多少idle进程。idle进程由系统自动创建, 运行在内核态。idle进程其pid=0，其前身是系统创建的第一个进程，也是唯一一个没有通过fork或者kernel_thread产生的进程。完成加载系统后，演变为进程调度、交换。</p>
                     <p>init进程由idle通过kernel_thread创建，在内核空间完成初始化后, 加载init程序,是系统中所有其它用户进程的祖先进程Linux中的所有进程都是有init进程创建并运行的。首先Linux内核启动，然后在用户空间中启动init进程，再启动其他系统进程。在系统启动完成完成后，init将变为守护进程监视系统其他进程。</p>
