--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -207,6 +207,7 @@
                 </table>
                 <p>C代码中嵌入汇编代码举例</p>
                 <img src="img/asm.jpg" alt="C代码中嵌入汇编代码举例">
+                <p>图片引用自参考资料2</p>
             </div>
         </section>
         <section id="experiment">
