--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -46,6 +46,8 @@
             <div id="实验步骤">
                 <h3>实验步骤</h3>
                 <img src="img/9.jpg">
+                <h3>自己本地搭建环境</h3>
+                <img src="img/10.jpg" alt="">
                 <h4>内核启动后进入menu的结果</h4>
                 <img src="img/1.jpg">
                 <h4>gdb调试过程图</h4>
