--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -46,7 +46,7 @@
             <div id="实验步骤">
                 <h3>实验步骤</h3>
                 <img src="img/9.jpg">
-                <h3>自己本地搭建环境</h3>
+                <h4>自己本地搭建环境</h4>
                 <img src="img/10.jpg" alt="">
                 <h4>内核启动后进入menu的结果</h4>
                 <img src="img/1.jpg">
@@ -347,6 +347,9 @@
             </p>
             <p>
                 <a href="http://blog.csdn.net/gatieme/article/details/51484562">Linux下0号进程的前世(init_task进程)今生(idle进程)</a>
+            </p>
+            <p>
+                <a href="http://www.cnblogs.com/July0207/p/5266594.html">构造一个简单的Linux系统MenuOS</a>
             </p>
         </section>
     </content>
