--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link type="text/css" rel="stylesheet" href="css/shCore.css" />
     <link type="text/css" rel="stylesheet" href="css/shCoreDefault.css" />
-    <link type="text/css" rel="stylesheet" href="styles/shThemeDefault.css">
+    <link type="text/css" rel="stylesheet" href="css/shThemeDefault.css">
     <script type="text/javascript" src="js/shCore.js"></script>
     <script type="text/javascript" src="js/shBrushCpp.js"></script>
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
