--- a/lab7/lab7_2.html
+++ b/lab7/lab7_2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 
 <head lang="en">
     <meta charset="utf-8">
@@ -51,7 +52,7 @@
                 </p>
                 <h3>可重定位目标文件</h3>
                 <p> 一个典型的ELF可重定位目标文件的格式。</p>
-                <img src="img/0.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/0.jpg" alt="">
                 <p>ELF头（ELF header）以一个16字节的序列开始，这个序列描述了生成该文件的系统的字的大小和字节顺序。ELF头剩下的部分包含帮助链接器语法分析和解释目标文件的信息。其中包括ELF头的大小、目标文件的类型（如可重定位、可执行或是共享的）、机器类型（如IA32）、节头部表的文件偏移，以及节头部表中的条目大小和数量。不同的节的位置和大小是由节头部表描述的，其中目标文件中每个节都有一个固定大小的条目。</p>
                 <p>夹在ELF头和节头部表之间的都是节。一个典型的ELF可重定位目标文件包含下面几个节：</p>
                 <p>.text 已编译程序的机器代码</p>
@@ -90,12 +91,12 @@
                 <h3>可执行目标文件</h3>
                 <p> 可执行目标文件的格式类似于可重定位目标文件的格式。ELF头部描述文件的总体格式。它还包括程序的入口点，也就是当程序运行时要执行的第一条指令的地址。.text 、.rodata和.data 节和可重定位目标文件中的节是相似的，除了这些节已经被重定位到它们最终的运行时存储器地址以外。.init节定义了一个小函数，叫做_init，程序的初始化代码会调用它。因为可执行文件是完全链接的（已被重定位了），所以它不再需要.rel节。</p>
                 <p>ELF可执行文件被设计得很容易加载到存储器，可执行文件的连续的片被映射到连续的存储器段。段头部表描述了这种映射关系。</p>
-                <img src="img/1.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/1.jpg" alt="">
                 <h3>加载可执行目标文件</h3>
                 <p>要运行可执行目标文件p，可以在Unix外壳的命令行中输入它的名字：unix> ./p</p>
                 <p>因为p不是一个内置的外壳命令，所以外壳会认为p是一个可执行目标文件，通过调用某个驻留在存储器中的称为加载器（loader）的操作系统代码来运行它。任何Unix程序都可以通过调用execve函数来调用加载器。加载器将可执行目标文件中的代码和数据从磁盘拷贝到存储器中，然后通过跳转到程序的第一条指令或入口点来运行该程序。这个将程序拷贝到存储器并运行的过程叫做加载。</p>
                 <p>每个Unix程序都有一个运行时存储器映像。如图7-13。例如：在32位Linux系统中，代码段总是从地址（0x8048000）处开始。数据段是在接下来的下一个4KB对齐的地址处。运行时堆在读/写段之后接下来的第一个4KB对齐的地址处，并童工调用malloc库往上增长。还有一个段是为共享库保留的。用户栈总是从最大的合法用户地址开始，向下增长的（向低存储器地方向增长）。从栈的上部开始的段是为操作系统驻留存储器的部分（也就是内核）的代码和数据保留的。</p>
-                <img src="img/2.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/2.jpg" alt="">
                 <p>当程序加载时，会创建如图所示的存储器映像。在可执行文件中段头部表的指导下，加载器将可执行文件的相关内容拷贝到代码和数据段。接下来，加载器跳转到程序的入口点，也就是符号_start的地址。在_start地址处的启动代码是在目标文件ctrl.o中定义的，对所有的C程序都是一样的。在从.text和.init节中调用了初始化例程后，启动代码调用atexti例程，这个程序附加了一系列在应用程序正常中止时应该调用的程序。exit函数运行atexit注册的函数，然后通过调用_exit将控制返回给操作系统。接着，启动代码调用应用程序的main程序，它会开始执行我们的C代码。在应用程序返回之后，启动代码调用_exit程序，它将控制返回给操作系统。</p>
                 <p>UNIX系统中的每个程序都运行在一个进程上下文中，有自己的虚拟地址空间。当外壳运行一个程序时，父外壳进程生成一个子进程，它是父进程的一个复制品。子进程通过execve系统调用启动加载器。加载器删除子进程现有的虚拟存储器段，并创建一组新的代码、数据、堆和栈段、新的栈和堆段被初始化为零。通过将虚拟地址空间中的页映射到可执行文件的页大小的片，新的代码和数据段被初始化为可执行文件的内容。最后，加载器跳转到_start地址，它最终会调用应用程序的main函数。除了一些头部信息，在加载过程中没有任何从磁盘到存储器的数据拷贝。直到CPU应用一个被映射的虚拟页才会进行拷贝，此时，操作系统利用它的页面调度机制自动将页面从磁盘传送到存储器。</p>
                 <h3>动态链接共享库</h3>
@@ -114,37 +115,37 @@
                 <p>-S该选项只进行编译而不进行汇编，生成汇编代码;</p>
                 <p>-c汇编把编译阶段生成的.s文件转成二进制目标代码;</p>
                 <p>链接将编译输出.o文件链接成最终的可执行文件</p>
-                <img src="img/3.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/3.jpg" alt="">
                 <p>查看各个文件大小，静态链接生成的文件要大。</p>
-                <img src="img/4.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/4.jpg" alt="">
                 <p>查看共享库依赖，静态链接的不依赖共享库。</p>
-                <img src="img/11.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/11.jpg" alt="">
                 <p>查看elf头信息,从图中可以看出真正的代码从0x8048320开始，这才是真正的程序入口</p>
-                <img src="img/5.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/5.jpg" alt="">
                 <h4>参数的传递过程</h4>
                 <p>查看execve函数信息.</p>
                 <p>shell就是用户键入命令，加载并执行可执行程序的控制台。会调用execve将命令行参数和环境参数传递给可执行程序的main函数</p>
-                <img src="img/6.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/6.jpg" alt="">
                 <p>execve是如何从内核态将参数传给进程（假设该进程是用户态）的用户态堆栈的？</p>
                 <p>发现，仍是从用户态的数据段中复制到用户态堆栈中的。那么跟内核什么关系呢？执行execve的进程就是当前的shell，所以参数首先会被压在当前shell进程的内核堆栈中。关键在传入内核的参数是指针，所以内核（sys_execve）要做的就是把指针的值复制回新进程的代码段，再复制到进程的用户堆栈段。初始化后的进程内存地址空间就是第二张图那样。也就解释了sys_execve加载进程并初始化的作用、结果。shell每次都fork一个shell去执行命令，所以，当新进程起来后，启动它的shell结束，曾经保存的参数就不要了。</p>
-                <img src="img/10.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/10.jpg" alt="">
                 <p>上面这段话是往年的师兄师姐的博客写的。个人认为写的不是很清楚。这个又不好调试跟踪，简单谈谈自己的想法，希望有高人指点一二。</p>
                 <p>真实的shell中。接受用户输入（比如输入个ls -l），把参数保存在shell的堆栈中。</p>
                 <p>对于本次实验，execlp的参数不是用户输入的，而是写死的。但这几个参数仍然是在menu的堆栈中。</p>
-                <img src="img/28.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/28.jpg" alt="">
                 <p>还记得实验四中嵌入汇编代码调用库函数是如何传参数的吗？</p>
                 <p>对！通过寄存器。我猜想，这里在库函数调用的时候传递参数也是要通过寄存器的。这个任务应该是编译器完成的。</p>
-                <img src="img/29.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/29.jpg" alt="">
                 <p>我们知道向系统调用传递6个参数，分别依次由%ebx，%ecx，%edx，%esi，%edi和%ebp这个6个寄存器完成。而在save_all中传入内核堆栈的顺序都是和上述寄存器顺序一样的。我认为参数在这里传入了内核态。</p>
-                <img src="img/30.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/30.jpg" alt="">
                 <p>而且在save_all之后，发生系统调用，也验证了我的想法。对于本次实验参数算是传给了sys_execve()。</p>
-                <img src="img/31.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/31.jpg" alt="">
                 <p>在do_execve_common()中拷贝了参数到bprm。其中bprm中有个子元素page用来存放参数。</p>
-                <img src="img/33.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/33.jpg" alt="">
                 <p>在load_elf_binary()中，将bprm的page拷贝到用户态的新的地址空间</p>
-                <img src="img/34.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/34.jpg" alt="">
                 <p>接下来将elf文件映射进内存，修改了eip，esp去执行新进程也就是hello。执行成功的execve是不返回的。下图中，对Exec函数做了一些微小的改变，加了一句输出exec return.这一句不执行，说明了execve不返回。</p>
-                <img src="img/32.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/32.jpg" alt="">
                 <p>
                     <br>
                     <br>
@@ -155,43 +156,43 @@
                 </p>
                 <h4>跟踪execlp的调用</h4>
                 <p>启动调试，设置断点sys_execve</p>
-                <img src="img/7.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/7.jpg" alt="">
                 <p>发现sys_execve调用了do_execve</p>
-                <img src="img/8.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/8.jpg" alt="">
                 <p>do_execve,再调用do_execve_common。这个函数不知道为什么通过加断点却停不下来。只能单步调试。</p>
-                <img src="img/9.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/9.jpg" alt="">
                 <p>看do_execve_common的参数表看得出来，这个函数会把函数参数和系统环境传进来进行相应的处理。</p>
-                <img src="img/12.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/12.jpg" alt="">
                 <p>然后调用exec_binprm来执行相应的程序。不过这个函数也停不下来。</p>
-                <img src="img/13.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/13.jpg" alt="">
                 <p>查看源代码吧。调用了search_binary_handler</p>
-                <img src="img/15.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/15.jpg" alt="">
                 <p>search_binary_handler这个函数倒是可跟踪。这个函数会调用各种不同的格式来识别相应的文件，直到识别为止，比如linux中可执行文件为ELF，它就会识别出elf文件。</p>
-                <img src="img/14.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/14.jpg" alt="">
                 <p>我们先看看bprm到底是什么，见到这个好多次了。</p>
-                <img src="img/20.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/20.jpg" alt="">
                 <p>可执行文件的识别被组织成了一个链表，每一种文件格式被定义为一个结构linux_binprm。该结构体在include/linux/binfmts.h文件中定义</p>
-                <img src="img/21.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/21.jpg" alt="">
                 <p>由于Linux是elf格式，故会执行对应的load_elf_binary</p>
-                <img src="img/16.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/16.jpg" alt="">
                 <p>load_elf_binary函数里面有一个函数start_thread</p>
-                <img src="img/17.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/17.jpg" alt="">
                 <p>start_thread，这个函数会复制内核堆栈，同时会设置新的进程的执行位置，即会设置新的eip，使eip指向新程序的入口位置。</p>
-                <img src="img/18.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/18.jpg" alt="">
                 <p>进入start_thread后,可以看到new_ip</p>
-                <img src="img/22.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/22.jpg" alt="">
                 <p>在改变regs前后查看regs</p>
-                <img src="img/23.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/23.jpg" alt="">
                 <p>ip变成新的了。</p>
-                <img src="img/24.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/24.jpg" alt="">
                 <p>这个ip是什么呢？就是要加载的hello的入口地址。</p>
                 <p>那么问题来了,这篇博客中第四张图的入口不是0x8048320吗？这里咋变成0x8048e08了呢？</p>
                 <p>主要是因为menu文件中的这个hello是静态链接，第四张图中的是动态链接。查看第二张图中的hello.static得到的也是0x8048e08</p>
                 <p>如果是静态链接的elf文件，那么直接加载文件即可。如果是动态链接的可执行文件，那么需要加载的是动态链接器。</p>
                 <p>问题又来了，我咋知道你是静态还是动态的？请看下文load_elf_binary中的分析。</p>
-                <img src="img/25.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/25.jpg" alt="">
                 <p>再执行就进行了输出。</p>
-                <img src="img/19.jpg" alt="">
+                <img src="img/a.jpg" data-url="img/19.jpg" alt="">
             </div>
             <div class="">
                 <h3>代码分析</h3>
@@ -399,7 +400,7 @@
                     </pre>
                     <p>可以看到，当这个文件需要用elf_interpreter的话，也就是说它需要依赖动态链接器来解释这个ELF文件，那么它就需要加载load_elf_interp，实际上是加载动态连接器ld，那么这时候Entry point address，也就是说在返回到用户态的时候，它返回的就不是这个可执行程序文件规定的起点，它返回的是动态连接器的程序入口，动态连接器负责解释当前的可执行文件，看它里面依赖哪些动态链接库，然后把那些动态链接库一个一个加载进来，加载进来之后再解释加载进来的动态链接库，看它这个动态链接库还依赖哪些文件，这样就有一个叫广度遍历的方法（即动态链接库的装载过程是一个图的遍历），把所有的动态链接库都装载起来，装载起来之后ld再负责把CPU的控制权移交给可执行程序头部规定的起点位置。</p>
                     <h4>还有些小问题。关于动态链接的。</h4>
-                    <img src="img/26.jpg" alt="">
+                    <img src="img/a.jpg" data-url="img/26.jpg" alt="">
                     <p>共享库在程序的链接时候并不像静态库那样在拷贝使用函数的代码，而只是作些标记。然后在程序开始启动运行的时候，动态地加载所需模块。</p>
                     <p>动态加载共享库(dynamically loaded (DL) libraries)是指在程序运行过程中可以加载的函数库。而不是像共享库一样在程序启动的时候加载。DL对于实现插件和模块非常有用，因为他们可以让程序在允许时等待插件的加载。在Linux中，动态库的文件格式跟共享库没有区别。</p>
                     <p>有专门的一组API用于完成操作动态库</p>
@@ -409,7 +410,7 @@
                     <p>函数原型：void *dlsym(void *handle,const char *symbol);功能描述：handle是由dlopen打开动态链接库后返回的指针，symbol就是要求获取的函数的名称，函数返回值是void*,指向函数的地址，供调用使用</p>
                     <p>函数原型：int dlclose(void *);功能描述：将已经装载的库句柄减一，如果句柄减至零，则该库会被卸载。如果存在析构函数，则在dlclose之后，析构函数会被调用。</p>
                     <p>有了这些知识，分析一下运行结果。</p>
-                    <img src="img/27.jpg" alt="">
+                    <img src="img/a.jpg" data-url="img/27.jpg" alt="">
                     <p>在编译的时候，就对可执行文件中做了共享库libshlibexample.so的标记。装载后，运行可以直接调用里面的SharedLibApi函数。</p>
                     <p>但是动态加载共享库libdllibexample.so不同，没有任何标记。只能先打来这个库，此时才把库装载到内存中，返回给进程一个句柄。再根据这个句柄找到库中的DynamicalLoadingLibApi函数，赋予函数指针func，最后调用func()。关闭库。</p>
                     <h3>总结</h3>
@@ -448,3 +449,64 @@
         </ul>
     </footer>
 </body>
+<script type="text/javascript">
+(function() {
+    //common
+    function tagName(tagName) {
+        return document.getElementsByTagName(tagName);
+    }
+
+    function $(id) {
+        return document.getElementById(id);
+    }
+
+    function addEvent(obj, type, func) {
+        if (obj.addEventListener) {
+            obj.addEventListener(type, func, false);
+        } else if (obj.attachEvent) {
+            obj.attachEvent('on' + type, func);
+        }
+    }
+    //这里可以按照需要配置些参数
+    var v = {
+            eleGroup: null,
+            eleTop: null,
+            eleHeight: null,
+            screenHeight: null,
+            visibleHeight: null,
+            scrollHeight: null,
+            scrolloverHeight: null,
+            limitHeight: null
+        }
+        //对数据进行初始化
+    function init(element) {
+        v.eleGroup = tagName(element)
+        screenHeight = document.documentElement.clientHeight;
+        scrolloverHeight = document.body.scrollTop;
+        for (var i = 0, j = v.eleGroup.length; i < j; i++) {
+            if (v.eleGroup[i].offsetTop <= screenHeight && v.eleGroup[i].getAttribute('data-url')) {
+                v.eleGroup[i].setAttribute('src', v.eleGroup[i].getAttribute('data-url'));
+                v.eleGroup[i].removeAttribute('data-url')
+            }
+        }
+    }
+
+    function lazyLoad() {
+        if (document.body.scrollTop == 0) {
+            limitHeight = document.documentElement.scrollTop + document.documentElement.clientHeight;
+        } else {
+            limitHeight = document.body.scrollTop + document.documentElement.clientHeight;
+        }
+        for (var i = 0, j = v.eleGroup.length; i < j; i++) {
+            if (v.eleGroup[i].offsetTop <= limitHeight && v.eleGroup[i].getAttribute('data-url')) {
+                v.eleGroup[i].src = v.eleGroup[i].getAttribute('data-url');
+                v.eleGroup[i].removeAttribute('data-url')
+            }
+        }
+    }
+    init('img')
+    addEvent(window, 'scroll', lazyLoad);
+})()
+</script>
+
+</html>
