--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -420,6 +420,7 @@
         </section>
         <section id="reference">
             <h2>参考资料</h2>
+            <p>深入理解计算机系统 第7章</p>
             <p>
                 <a href="http://www.jianshu.com/p/f2babbdb4922">可执行程序的装载</a>
             </p>
