--- a/lab6/lab6.html
+++ b/lab6/lab6.html
@@ -33,7 +33,35 @@
         <section id="abc">
             <h2>基础知识</h2>
             <div id="LinuxSource">
-                <p>进程是任何多道程序设计的操作系统额基本概念，进程的定义就是程序执行的一个实例，也是系统资源调度的最小单位。当创建一个进程的时候，实际上系统就是在复制了父进程的几乎所有信息包括代码。子进程接收父进程地址空间的一个逻辑拷贝，然后，这个子进程会从创建进程那个系统调用服务代码之后的下一条指令开始执行（ret_from_fork），执行代码与父进程是相同的。</p>
+                <h4>进程</h4>
+                <p>进程是任何多道程序设计的操作系统额基本概念，进程的定义就是程序执行的一个实例，也是系统资源调度的最小单位。进程有三种状态：</p>
+                <ol class="simple">
+                    <li>运行。进程在CPU上执行，或等待被执行（会被调度）。</li>
+                    <li>停止。进程被挂起（不会被调度）。收到
+                        <tt>SIGSTOP</tt> 、
+                        <tt>SIGTSTP</tt> 、
+                        <tt>SIDTTIN</tt> 、
+                        <tt>SIGTTOU</tt> 信号，进程停止，收到
+                        <tt>SIGCONT</tt> 信号，进程再次开始运行。</li>
+                    <li>终止。进程永远停止。原因可能是：收到终止进程的信号，从主程序返回，调用
+                        <tt>exit</tt> 函数。</li>
+                </ol>
+                <p>创建新进程可以使用
+                    <tt>fork</tt> 函数。新创建的子进程和父进程几乎相同，它获得父进程用户级虚拟地址空间和文件描述符的副本，主要区别是它们的PID不同。
+                    <tt>fork</tt> 函数调用一次，返回两次；父子进程是并发运行的，不能假设它们的执行顺序；两个进程的初始地址空间相同，但是是相互独立的；它们还共享打开的文件。</p>
+                <p>进程终止时，并不会被立即清除，而是等待父进程回收，称为僵死进程。父进程回收终止的子进程时，内核将子进程退出状态传给父进程，然后抛弃该进程。如果回收前父进程已经终止，那么僵死进程由
+                    <tt>init</tt> 进程回收。</p>
+                <p>回收子进程可以用
+                    <tt>wait</tt> 和
+                    <tt>waitpid</tt> 等函数。</p>
+                <p>内核调用
+                    <tt>execve</tt> 函数在当前进程的上下文中加载并运行一个新程序。
+                    <tt>execve</tt> 加载
+                    <tt>filename</tt> 后，调用启动代码，启动代码准备栈，将控制传给新程序的主函数
+                    <tt>int main(int argc, char *argv[],char *envp[])</tt> 。下面是用户栈的典型组织：</p>
+                <img alt="" src="img/12.jpg" />
+                <p>fork函数在新的子进程中运行相同的程序，新的子进程时父进程的复制品。execve函数在当前进程的上下文中加载一个新的程序，它会覆盖当前进程的地址空间，但并没有创建一个新进程，新的程序仍然有相同的PID，并且继承了调用execve函数时已打开的所有文件描述符。</p>
+                <p>当创建一个进程的时候，实际上系统就是在复制了父进程的几乎所有信息包括代码。子进程接收父进程地址空间的一个逻辑拷贝，然后，这个子进程会从创建进程那个系统调用服务代码之后的下一条指令开始执行（ret_from_fork），执行代码与父进程是相同的。</p>
                 <p>进程创建使用的是fork这个命令。fork先是调用find_empty_process为子进程找到一个空闲的任务号，然后调用copy_process复制进程,fork返回copy_process的返回值last_pid，也就是子进程号。从上面的实现看来，fork的返回值不会是0，上面的逻辑正是父进程的执行逻辑。对于子进程，先看子进程的初始状态，copy_process中创造了子进程的上下文执行环境，这个上下文环境正是父进程fork系统调用时的环境，其中p->tss.eip正是被赋值为fork之后下一条指令地址，这就是子进程和父进程都返回到fork下一条指令处的原因。同时p->tss.eax被赋了值0，当调度到子进程开始执行时，首先加载其上下文环境，eip被加载为fork之后下一条指令，eax就被加载为0，所以，对于子进程来说，和父进程唯一的区别就是返回值（eax）为0。</p>
                 <p>task_struct是进程描述符。操作系统通过task_struct感知进程的存在。该结构体在内核中的位置：./include/Linux/sched.h</p>
                 <div class="code">
