--- a/lab8/lab8.html
+++ b/lab8/lab8.html
@@ -90,7 +90,7 @@
                 <p>两者的区别在于，进程上下文与当前执行进程密切相关，而中断上下文在逻辑上与进程没有关系。进程上下文主要是异常处理程序和内核线程。内核之所以进入进程上下文是因为进程自身的一些工作需要在内核中做。例如，系统调用是为当前进程服务的，异常通常是处理进程导致的错误状态等。所以在进程上下文中引用current是有意义的。内核进入中断上下文是因为中断信号而导致的中断处理或软中断。而中断信号的发生是随机的，中断处理程序及软中断并不能事先预测发生中断时当前运行的是哪个进程，所以在中断上下文中引用current是可以的，但没有意义。事实上，对于A进程希望等待的中断信号，可能在B进程执行期间发生。例如，A进程启动写磁盘操作，A进程睡眠后现在时B进程在运行，当磁盘写完后磁盘中断信号打断的是B进程，在中断处理时会唤醒A进程。
                 </p>
                 <p>当进程执行的某些时刻，内核可以决定抢占当前进程，并重新开始一个先前被抢占的进程，这称为调度（schedule），由内核中的调度器代码处理。当内核选择一个新的进程运行时，我们称内核调度了这个进程。内核使用上下文切换机制来将控制转移到新进程。上下文切换保存当前进程的上下文，恢复先前被抢占进程保存的上下文，将控制传递给新恢复的进程。</p>
-                <p>系统调用和中断可以引发上下文切换。听赵金镛同学说，系统调用的时候，当前进程信息保存在自己的pcb中，而中断发生时，当前进程上下问保存在中断的堆栈中。</p>
+                <p>系统调用和中断可以引发上下文切换。</p>
                 <p>挂起正在CPU上执行的进程，与中断时保存现场是不同的，中断前后是在同一个进程上下文中，只是由用户态转向内核态执行。</p>
                 <h4>系统调用</h4>
                 <p>在Linux中，可以使用
@@ -134,7 +134,7 @@
                     </li>
                 </ol>
                 <h3>Linux操作系统架构和系统执行过程概览</h3>
-                <p>内容出自老师课件</p>
+                <p>这部分内容出自老师课件</p>
                 <img src="img/19.jpg" alt="">
                 <img src="img/20.jpg" alt="">
                 <img src="img/21.jpg" alt="">
@@ -403,7 +403,7 @@
 						    /* Here we just switch the register state and the stack. 
 						     * 切换进程的执行环境, 包括堆栈和寄存器
 						     * 同时返回上一个执行的程序
-						     * 相当于prev = witch_to(prev, next)  */
+						     * 相当于prev = switch_to(prev, next)  */
 						    switch_to(prev, next, prev);
 
 						    /*  switch_to之后的代码只有在
@@ -482,9 +482,17 @@
                     <p>将标号1的地址放入prev->thread.ip。可见下次prev运行时，将从pop %ebp开始。 然后，将next->thread.ip压栈，并跳转到__switch_to执行。</p>
                     <p>对比<a href="https://xuezhaojiang.github.io/LinuxCore/lab2/lab2.html">实验2中</a>，将新进程的ip压栈之后，ret，使得next->thread.ip的值进入eip寄存器。</p>
                     <p>可是这次实验中的switch_to中，将新进程的ip值压入到新进程的内核栈中，却没有ret，这个是怎么回事？</p>
-                    <p>__switch_to返回时，会从堆栈弹出一项作为返回地址，由于调用__switch_to时不是通过call指令，而是手工压栈加跳转，所以不会返回到标号1处继续执行，而是返回到next->thread.ip处。就是说__switch_to的返回行使了实验2中ret的任务，精彩，实在是精彩；厉害，真心是厉害。如果next进程不是新创建出来的，那么原来也是通过switch_to切换走的，则断点必定是“那里”的标号1，且此时next的内核堆栈上保存有那一次的ebp和flags，以及ebx等。 因此通过这一次函数调用，内核的控制流程也被成功转移到next，在next上次切换的标号1处，对上次保存的ebp和flags等内容进行恢复，这就完成了整个切换过程。
-                    </p>
+                    <p>__switch_to返回时，会从堆栈弹出一项作为返回地址，由于调用__switch_to时不是通过call指令，而是手工压栈加跳转，所以不会返回到标号1处继续执行，而是返回到next->thread.ip处。就是说__switch_to的返回行使了实验2中ret的任务，精彩，实在是精彩；厉害，真心是厉害。如果next进程不是新创建出来的，那么原来也是通过switch_to切换走的，则断点也是标号1，且此时next的内核堆栈上保存有那一次的ebp和flags，以及ebx等。 因此通过这一次函数调用，内核的控制流程也被成功转移到next，在next上次切换的标号1处，对上次保存的ebp和flags等内容进行恢复，这就完成了整个切换过程。</p>
+                    <p>但如果进程B刚刚被创建，之前没有被switch_to出去过，那么[next_ip]里存的将是ret_from_fork（<a href="https://xuezhaojiang.github.io/LinuxCore/lab6/lab6.html">实验6</a>的do_fork中，copy_thread函数有p->thread.ip = (unsigned long) ret_from_fork，然后将它加入调度器 wake_up_new_task(p)）。</p>
                     <p>强烈建议大家看这篇文章，真心厉害。<a href="http://home.ustc.edu.cn/~hchunhui/linux_sched.html">x86体系结构下Linux-2.6.26的进程调度和切换</a></p>
+                    <embed src="img/switch_to.mp4" width="852" height="480" autostart="ture"></embed>
+                    <p>
+                        视频内容参考了上面推荐的链接，但视频是我做的，MP4格式的。可用于非盈利用途。在我自己电脑上Chrome浏览器上可以播放。
+                    </p>
+                    <p>
+                        在下还不太会使用html，为了防止不能正常播放，影响阅读和给我评分，也提供pdf版本下载。<a href="img/switch_to.mp4">点击这里下载MP4</a> <a href="img/switch_to.pdf">点击这里下载PDF</a>
+                    </p>
+                    <p>视频中需要说明的一点是，switch_to是宏定义，这里不是正常的函数调用，没有switch_to的返回地址，ebp的位置是调用switch_to的函数的堆栈的基址。在<a href="#reference">附注</a>中，写了个函数，证明了这点。</p>
                     <h4>arch/x86/kernel/process_32.c:__switch_to</h4>
                     <pre name="code" class="brush:cpp;first-line:245;collapse: false">
 						__visible __notrace_funcgraph struct task_struct *
@@ -600,6 +608,27 @@
             <p><a href="http://www.embedu.org/column/Column240.htm">对Linux内核中进程上下文和中断上下文的理解</a></p>
             <p><a href="http://njqyu.blog.51cto.com/175649/841165">中断上下文和进程上下文区分？</a></p>
             <p>强烈建议大家看这篇文章，真心厉害。<a href="http://home.ustc.edu.cn/~hchunhui/linux_sched.html">x86体系结构下Linux-2.6.26的进程调度和切换</a></p>
+        </section>
+        <section id="appendix">
+            <h2>附注</h2>
+            <p>验证调用宏定义，没有普通函数调用的call,leave,ret.这是因为宏定义在预处理阶段就处理掉了，根本不能称为函数。</p>
+            <img src="img/28.jpg" alt="">
+            <p>可以看到预处理后的内容，已经宏定义的使用根本不是普通函数调用过程。</p>
+            <table>
+                <tr>
+                    <td><img src=img/25.jpg style="border:0;margin-left:2em;"></td>
+                    <td><img src=img/26.jpg style="border:0;margin-left:2em;"></td>
+                    <td><img src=img/27.jpg style="border:0;margin-left:2em;"></td>
+                </tr>
+            </table>
+            <p>如果刚才上图中的没有说服力，下图中则是完全仿switch_to写的，可见依然不是函数调用。</p>
+            <table>
+                <tr>
+                    <td><img src=img/29.jpg style="border:0;margin-left:2em;"></td>
+                    <td><img src=img/30.jpg style="border:0;margin-left:2em;"></td>
+                    <td><img src=img/31.jpg style="border:0;margin-left:2em;"></td>
+                </tr>
+            </table>
         </section>
     </content>
     <footer>
