--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -70,7 +70,7 @@
                 <p>1.由m定义并能被其他模块引用的全局符号。全局链接器对应于非静态的C函数以及被定义为不带static属性的全局变量。</p>
                 <p>2.由其他模块定义并被模块m以引用的全局符号——外部符号，对应于定义在其他模块中的C函数和变量</p>
                 <p>3.只被模块m定义和引用的本地符号。有的本地链接器符号对应于带static属性的C函数和全局变量。</p>
-                <p>任何声明带有static属性的全局变量或者函数都是模块私有的。类似地，任何声明为不带static属性的全局变量和函数都是公有的，可以被其他模块访问的。</p>
+                <p>定义为static属性的本地过程变量不在栈中，编译器在.data和.bss中为每个定义分配空间，并在符号表中创建一个有唯一名字的本地链接器符号。任何声明带有static属性的全局变量或者函数都是模块私有的。类似地，任何声明为不带static属性的全局变量和函数都是公有的，可以被其他模块访问的。</p>
                 <p>符号表是由汇编器构造的，使用编译器输出到汇编语言.s文件中的符号。</p>
                 <h3>符号解析</h3>
                 <p>链接器解析符号引用的方法是将每个引用与它输入的可重定位目标文件的符号表中的艺哥确定的符号定义联系起来。对那些和引用定义在相同模块中的本地符号引用，符号解析是非常简单明了的。编译器只允许每个模块中每个本地符号只有一个定义。编译器还确保静态本地变量，它们也会有本地链接器符号，拥有唯一的名字。</p>
