change the word core to kernel

--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>linux core lab1</title>
+    <title>linux kernel lab1</title>
     <link rel="stylesheet" type="text/css" href="style/lab1.css">
 </head>
 
