--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -2,7 +2,7 @@
 
 <head lang="en">
     <meta charset="utf-8">
-    <title>linux core lab4</title>
+    <title>linux kernel lab4</title>
     <!-- <link rel="stylesheet" href="css/normalize.css" type="text/css"> -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
