--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -2,7 +2,7 @@
 
 <head lang="en">
     <meta charset="utf-8">
-    <title>linux core lab3</title>
+    <title>linux kernel lab3</title>
     <!-- <link rel="stylesheet" href="css/normalize.css" type="text/css"> -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link type="text/css" rel="stylesheet" href="css/shCore.css" />
